add swagger and storage migrations
